[package]
name = "node_module-nuke"
version = "0.2.0"
edition = "2021"
description = "Efficiently delete node_modules directories with nuclear precision"
license = "MIT"
repository = "https://github.com/codyaverett/node_module-nuke"
homepage = "https://github.com/codyaverett/node_module-nuke"
documentation = "https://docs.rs/node_module-nuke"
keywords = ["cli", "node_modules", "cleanup", "disk-space", "nodejs"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Cody Averett <codyaverett@gmail.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
anyhow = "1.0"

